--- a/resume.html
+++ b/resume.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="profile">
             <div class="info">
-                <h1>Name: Aaron Josh Baon</h1>
-                <h5>Address: 1228 Petunia St. Caloocan City</h5>
-                <h5>Contant No.: 09205443381</h5>
-                <h5>Email:Aaronbaon1@gmail.com</h5>
+                <h1>Name: Kenyon Martin T. Evangelista</h1>
+                <h5>Address: Grandmonaco libis binangonan rizal</h5>
+                <h5>Contant No.: 09159630324</h5>
+                <h5>Email:ekenyonmartin26@gmail.com</h5>
             </div>
             <img src="https://scontent.fcrk3-1.fna.fbcdn.net/v/t39.30808-6/327920489_557119729774784_3329935275395125668_n.jpg?_nc_cat=109&cb=99be929b-8d691acd&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFC1FmuUGQzyZgfzY8att9e9qtzJHvAjwL2q3Mke8CPAlWkqJmrVRY0Kvs__njkVl5LC1ejW3tsFGsLHWfkGtQH&_nc_ohc=RGdif_ulTNUAX_nT8jF&_nc_ht=scontent.fcrk3-1.fna&oh=00_AfAMaDIQMCzjjUj3CUsoN3qVYmwCb1tQFIuCz2AM1Doc_Q&oe=65AF66E8" alt="">
         </div>
         <div class="background">
             <div class="objective">
                 <h3>Objective:</h3>
-                <p>As a dedicated and aspiring programmer, I am actively seeking opportunities to leverage my coding skills in a dynamic and collaborative environment. Eager to contribute to innovative projects, I am committed to continuous learning and growth within the field, with a strong focus on creating meaningful and impactful solutions.</p>
+                <p>Self-motivated Programmer looking to revitalize companies' programming and software development functions by leveraging expertise in Javascript.</p>
             </div>
             <div class="academic-backgrounds">
                 <h3>Academic Background</h3>
@@ -31,7 +31,7 @@
                         <p>Graduation Year: 2026</p>
                     </li>
                     <li class="education">
-                        <h4>Camarin High School</h4>
+                        <h4>Binangonan Catholic College</h4>
                         <p>Graduation Year: 2019</p>
                     </li>
                 </ul>
@@ -39,7 +39,6 @@
             <div class="skills">
                 <h3>Skills:</h3>
                 <ul>
-                    <li>Photo Editing</li>
                     <li>Web Design</li>
                     <li>Web Developer</li>
                 </ul>
