--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
                 <h5>Contant No.: 09159630324</h5>
                 <h5>Email:ekenyonmartin26@gmail.com</h5>
             </div>
-            <img src="https://scontent.fcrk3-1.fna.fbcdn.net/v/t39.30808-6/327920489_557119729774784_3329935275395125668_n.jpg?_nc_cat=109&cb=99be929b-8d691acd&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFC1FmuUGQzyZgfzY8att9e9qtzJHvAjwL2q3Mke8CPAlWkqJmrVRY0Kvs__njkVl5LC1ejW3tsFGsLHWfkGtQH&_nc_ohc=RGdif_ulTNUAX_nT8jF&_nc_ht=scontent.fcrk3-1.fna&oh=00_AfAMaDIQMCzjjUj3CUsoN3qVYmwCb1tQFIuCz2AM1Doc_Q&oe=65AF66E8" alt="">
+            <img src="https://scontent-hkg1-1.xx.fbcdn.net/v/t1.15752-9/356606433_1206314937433775_5974694069221359061_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8cd0a2&_nc_eui2=AeHBdIedLTahVAjSIbGyW6PhIXWpS1rEXSEhdalLWsRdIRpn67jalJfbpG952VRS-9STv5XQ8xut_QxKIuxpi5Fr&_nc_ohc=ub3Lt_bqS4UAX8pfP71&_nc_ht=scontent-hkg1-1.xx&oh=03_AdT25tXKmdt46PTGP4l7j4uogqrawOut911gPadoC06UJA&oe=65D59413" alt="">
         </div>
         <div class="background">
             <div class="objective">
